--- a/app/src/main/res/layout/fragment_carrito.xml
+++ b/app/src/main/res/layout/fragment_carrito.xml
@@ -7,10 +7,9 @@
     android:orientation="vertical"
     android:background="@color/design_default_color_primary_dark">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerListaCarrito"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Carrito"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
