--- a/app/src/main/res/layout/fragment_pedido.xml
+++ b/app/src/main/res/layout/fragment_pedido.xml
@@ -7,10 +7,9 @@
     android:background="#808080"
     tools:context=".Fragments.PedidoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerListaPedidos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Pedido" />
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
